force-app/main/default/objects/ServiceDetail__c/ServiceDetail__c.object-meta.xml
<CustomObject>
    <label>Service Detail</label>
    <nameField>
        <displayFormat>SD-{000000}</displayFormat>
        <label>Service Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>