force-app/main/default/objects/ServiceDetail__c/fields/DiagnosisCode__c.field-meta.xml
<CustomField>
    <fullName>DiagnosisCode__c</fullName>
    <label>Diagnosis Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>