force-app/main/default/objects/ServiceDetail__c/fields/MasterDetailToAccount__c.field-meta.xml
<CustomField>
    <fullName>MasterDetailToAccount__c</fullName>
    <label>MasterDetailToAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Service Details</relationshipLabel>
    <relationshipName>Patient_ServiceDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>