force-app/main/default/objects/ServiceDetail__c/fields/ProcedureCode__c.field-meta.xml
<CustomField>
    <fullName>ProcedureCode__c</fullName>
    <label>Procedure Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>