force-app/main/default/objects/ServiceDetail__c/fields/StatusReason__c.field-meta.xml
<CustomField>
    <fullName>StatusReason__c</fullName>
    <label>Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>